# Sqeletor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
docs/: DESIGN.md  IDEA.md  REQUIREMENTS.md  RESEARCH.md
mocks/: mock-2.html  mock-3-16steps.html
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
